# make general chat method to do all the banking services