@@ -33,15 +33,6 @@ public class OpenAiWebClient {
                 .build();
     }
 
-    // Method to list available models (run this to find your valid models)
-    public Mono<String> listModels() {
-        return webClient.get()
-                .uri("/models")
-                .retrieve()
-                .bodyToMono(String.class)
-                .doOnNext(modelsJson -> System.out.println("Available models: " + modelsJson));
-    }
-
     public Mono<IntentResult> chat(String prompt) {
         Map<String, Object> payload = Map.of(
                 "model", "google/gemini-pro-1.5", // a known free model on OpenRouter
@@ -59,12 +50,12 @@ public class OpenAiWebClient {
                     if (response.getChoices() == null || response.getChoices().isEmpty()) {
                         return Mono.error(new RuntimeException("No choices returned from OpenRouter"));
                     }
-                    String content = response.getChoices().get(0).getMessage().getContent();
+                    String content = response.getChoices().getFirst().getMessage().getContent();
                     try {
                         ObjectMapper objectMapper = new ObjectMapper();
                         String cleanJson = extractJsonFromMarkdown(content);
                         IntentResult intentResult = objectMapper.readValue(cleanJson, IntentResult.class);
-                        log.info(intentResult.toString());
+                    //    log.info(intentResult.toString());
                         return Mono.just(intentResult);
                     } catch (Exception e) {
                         return Mono.error(new RuntimeException("Failed to parse IntentResult: " + e.getMessage(), e));
@@ -82,94 +73,4 @@ public class OpenAiWebClient {
         }
         return responseBody; // fallback
     }
-
- /*private boolean isEmptyResponseException(Throwable ex) {
-        if (ex instanceof RuntimeException && ex.getCause() instanceof MismatchedInputException) {
-            return ex.getCause().getMessage() != null &&
-                    ex.getCause().getMessage().contains("No content to map due to end-of-input");
-        }
-        return false;
-    }
-
-    public Mono<IntentResult> analyzeText(String text) {
-        return webClient.post()
-                .uri("/analyze")
-                .contentType(MediaType.APPLICATION_JSON)
-                .bodyValue(new AnalyzeRequest(text))
-                .retrieve()
-                .onStatus(HttpStatusCode::is4xxClientError,
-                        response -> response.bodyToMono(String.class)
-                                .flatMap(errorBody -> Mono.error(new RuntimeException("4xx Error: " + errorBody))))
-                .onStatus(HttpStatusCode::is5xxServerError,
-                        response -> response.bodyToMono(String.class)
-                                .flatMap(errorBody -> Mono.error(new RuntimeException("5xx Error: " + errorBody))))
-                .bodyToMono(String.class)
-                .map(response -> {
-                    String cleanJson = extractJsonFromMarkdown(response);
-                    ObjectMapper objectMapper = new ObjectMapper();
-                    try {
-                        IntentResult intentResult = objectMapper.readValue(cleanJson, IntentResult.class);
-                        log.info("IntentResult: {}", intentResult);
-                        return intentResult;
-                    } catch (JsonProcessingException e) {
-                        throw new RuntimeException("Error parsing IntentResult", e);
-                    }
-                });
-
-    }*/
-/*
-
-    @Qualifier("aiWebClient")
-    private final WebClient webClient;
-
-    @Value("${openai.api.key}")  // Ensure you have your OpenAI API key stored in your properties file
-    private String apiKey;
-
-    public OpenAiWebClient(
-            WebClient.Builder webClientBuilder) {
-
-        this.webClient = webClientBuilder
-                .baseUrl("https://api.openai.com/v1")
-                .defaultHeader(HttpHeaders.AUTHORIZATION, "Bearer " + apiKey)
-                .defaultHeader("Content-Type", "application/json")
-                .build();
-    }
-*/
-
-    // Method to list available models (OpenAI models)
- /*   public Mono<String> listModels() {
-        return webClient.get()
-                .uri("/models")
-                .retrieve()
-                .bodyToMono(String.class)
-                .doOnNext(modelsJson -> System.out.println("Available models: " + modelsJson));
-    }
-
-    public Mono<IntentResult> chat(String prompt) {
-        Map<String, Object> payload = Map.of(
-                "model", "gpt-3.5-turbo",  // You can change the model name to any available model
-                "messages", List.of(Map.of("role", "user", "content", prompt)),
-                "max_tokens", 1000
-        );
-
-        return webClient.post()
-                .uri("/chat/completions")
-                .bodyValue(payload)
-                .retrieve()
-                .bodyToMono(OpenAiResponse.class) // Use OpenAiResponse record here
-                .flatMap(response -> {
-                    if (response.choices() == null || response.choices().isEmpty()) {
-                        return Mono.error(new RuntimeException("No choices returned from OpenAI"));
-                    }
-                    String content = response.choices().get(0).message().content();
-                    try {
-                        ObjectMapper objectMapper = new ObjectMapper();
-                        IntentResult intentResult = objectMapper.readValue(content, IntentResult.class);
-                        log.info("Received IntentResult: " + intentResult);
-                        return Mono.just(intentResult);
-                    } catch (Exception e) {
-                        return Mono.error(new RuntimeException("Failed to parse IntentResult: " + e.getMessage(), e));
-                    }
-                });
-    }*/
 }
